Refactoring, hit points

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 
 <h2>"Testing infrastructure working!"</h2>
 
-<form action="/play" method="post">
+<form action="/names" method="post">
   player_1: <input type="text" name="player_1" />
   player_2: <input type="text" name="player_2" />
   <input type="submit" value="Submit">
