Attack button added

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,9 @@
-
 <h1> <%= @player_1  %> vs <%= @player_2 %>  </h1>
 
 <h2> <%= @player_2 %> hit points: 100/100 </h2>
+
+<p> Please take an action </p>
+
+<form action="/attack" method='get'>
+  <input type="submit" value="Attack">
+</form>
