Added tests for reducing hit points

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,1 @@
-<p> You attacked <%= @player_2 %>. It's super effective. </p>
+<p> You attacked <%= @player_2 %>. It's super effective. <%= @player_2 %>'s HP is <%= @player_2_hp %>/100</p>
